2008-10-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Add function names to error messages.

	* elisp.eclass (SITEFILE): Move from elisp-common.eclass to here
	and don't assign a default value.
	(elisp_src_install): Allow for packages without	site-init file.

2008-10-09  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITEETC): Document as eclass variable.
	(elisp-site-regen): Use sed instead of cat for concatenation of
	site-init files, since they may not have a trailing newline.

2008-09-17  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Output a deprecation warning.

2008-09-16  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Add category for emacs-updater

2008-09-13  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): Be less verbose, bug 237546.
	* elisp-common.eclass (elisp-site-regen): Likewise.
	Thanks to Marijn Schouten <hkbst@gentoo.org> for complaining.

2008-09-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Return definite status.

2008-08-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_unpack): Handle the case of empty ${A}.

2008-08-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (VERSION): Remove unnecessary global variable to
	reduce namespace pollution.
	(elisp_pkg_setup): Use NEED_EMACS, clarify local variable names.

	* elisp-common.eclass (BYTECOMPFLAGS): New variable.
	(elisp-compile): Use it, instead of hardcoding the load-path.
	(EMACS, EMACSFLAGS): Document as eclass variables.

2008-08-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-compile): Add current directory to
	load-path, to ensure that interdependent elisp files are visible
	between themselves.

2008-08-10  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Fix issue with empty
	einfo lines. Indent here-document. Change wording of message,