@@ -3,8 +3,10 @@
 	* elisp-common.eclass: Add function names to error messages.
 
 	* elisp.eclass (SITEFILE): Move from elisp-common.eclass to here
-	and don't assign a default value.
+	and don't assign a default value. Improve its documentation.
 	(elisp_src_install): Allow for packages without	site-init file.
+	(elisp_src_compile, elisp_src_install): Remove messages from "die"
+	commands since elisp-common.eclass is verbose enough.
 
 2008-10-09  Ulrich Mueller  <ulm@gentoo.org>
 
